# oil-impact-on-norwegian-economy

./: .gitignore  README.md  README_NOR.MD  pyproject.toml  requirements.txt
data/processed/: indexed.csv  oil_forecast.csv  oil_volatility.csv  regression.csv  returns.csv  rolling_corr.csv  standardized.csv  weekly_close.csv
data/raw/: raw_prices.csv
data/raw/stocks/: dnb.csv  eqnr.csv  nhy.csv  nokusd.csv  oil.csv
data/stats/: correlation_matrix.csv  descriptive_stats.csv
docs/: results.md  results_nor.md
src/dashboard/: app.py  data.py  filter.py  layout.py  render.py
src/lib/dashboard/: core.py
src/lib/pipelines/: features.py  fetch.py  regression.py  transforms.py
src/pipelines/: processed.py  stocks.py
src/theme/: dashboard_styling.py  theme.py
src/utils/: dashboard_utils.py
src/visuals/: annotations.py  correlation.py  direct_relationship.py  heatmap.py  indexed.py  regression.py  stats_table.py  volatility.py
