[project]
name = "oil-impact-on-norwegian-economy"
version = "0.1.0"
description = "Interactive dashboard analyzing the impact of oil prices on Norwegian stocks (EQNR, DNB, NHY) and NOK/USD exchange rate, with rolling correlations, volatility analysis, and linear regression forecasting."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pandas>=3.0.3",
    "plotly>=6.7.0",
    "scikit-learn>=1.9.0",
    "streamlit>=1.58.0",
    "streamlit-autorefresh>=1.0.1",
    "watchdog>=6.0.0",
    "yfinance>=1.4.0",
]
